# wxWidgetTest

./: .gitignore  CMakeLists.txt  LICENSE  README.md  vcpkg.txt
.github/workflows/: build.yml  build_Linux_x64.yml  build_Windows_x64.yml  build_Windows_x64.yml__  cmake.yml
cmake/modules/: CMakeRC.cmake  FindPackageHandleStandardArgs.cmake  FindwxWidgets.cmake  rapidjson.cmake
liboperation/: CMakeLists.txt  DoOperation.cpp  DoOperation.h  FileEnumerator.cpp  compressionOptions.h  utilities.cpp  utilities.h
wxWidgetsTest/: CMakeLists.txt  DoOperation.cpp  DoOperation.h  FileEnumerator.cpp  FileEnumerator.h  compressionOptions.h  utilities.cpp  wxProgressInfoClientData.cpp  wxProgressInfoClientData.h  wxWidgetsTest.cpp  wxWidgetsTest.h
wxWidgetsTest2/: CMakeLists.txt  customEvents.cpp  customEvents.h  htmlpage.cpp  htmlpage.h  page.html  webView.cpp  webView.h
